packages/compiler/tests/compile/yaml/errors/not_allowed_char.t/run.t
Caractère non valide

  $ publicodes compile input.publicodes
  error[E001]: Fin de fichier inattendue : il manque un caractère
      = Par exemple, `"`, `'`, ou `]`
  [2]
